--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<<<<<<< HEAD
 <!doctype html>
-=======
-<!DOCTYPE html>
->>>>>>> 3c0cefe307e7ccefa8d7abb91542686b60f45b4c
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
@@ -169,28 +164,20 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="./images/yt.svg" class="footer__social-icon youtube" />
+            <img src="./images/yt.svg" class="footer__social-icon youtube">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="./images/vk.svg" class="footer__social-icon vk" />
+            <img src="./images/vk.svg" class="footer__social-icon vk">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img
-              src="./images/pinterest.svg"
-              class="footer__social-icon pinterest"
-            />
+            <img src="./images/pinterest.svg" class="footer__social-icon pinterest">
           </a>
         </li>
       </ul>
     </footer>
   </body>
-=======
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
->>>>>>> 3c0cefe307e7ccefa8d7abb91542686b60f45b4c
 </html>
