--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
         />
       </a>
       <address class="header__contacts-address">
-        <a class="header__contacts-phone" href="tel:+9 999 555 5555"
-          >+9 999 555 5555</a
-        >
+        <a class="header__contacts-phone" href="tel:+99995555555"
+          >+99995555555</a>
         <a class="header__contacts-mail" href="mailto:info@sobaka.ge"
-          >info@sobaka.ge</a
-        >
+          >info@sobaka.ge</a>
         <div>наб. Принсенграхт 263- 265, Амстердам</div>
       </address>
     </header>
@@ -51,8 +49,7 @@
         </h1>
         <div class="cover__description">
           <span class="cover__description-text"
-            >Аукцион вещей, в которые никто не верил</span
-          >
+            >Аукцион вещей, в которые никто не верил</span>
           <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
         </div>
       </section>
@@ -113,7 +110,7 @@
       </section>
       <section class="about">
         <div class="about__logo">
-          <img src="./images/logo-white.svg" class="about__logo-image" />
+          <img src="./images/logo-white.svg" alt="Логотип белый" class="about__logo-image" />
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
@@ -140,12 +137,10 @@
     </main>
     <footer class="footer">
       <address class="footer__contacts-address">
-        <a class="footer__contacts-phone" href="tel:+9 999 555 5555"
-          >+9 999 555 5555</a
-        >
+        <a class="footer__contacts-phone" href="tel:+99995555555"
+          >+9 999 555 5555</a>
         <a class="footer__contacts-mail" href="mailto:info@sobaka.ge"
-          >info@sobaka.ge</a
-        >
+          >info@sobaka.ge</a>
         <div>наб. Принсенграхт 263- 265, Амстердам</div>
       </address>
       <nav class="footer__menu">
@@ -164,17 +159,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="./images/yt.svg" class="footer__social-icon youtube">
+            <img src="./images/yt.svg" alt="Логотип youtube" class="footer__social-icon youtube">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="./images/vk.svg" class="footer__social-icon vk">
+            <img src="./images/vk.svg" alt="Логотип vk" class="footer__social-icon vk">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="./images/pinterest.svg" class="footer__social-icon pinterest">
+            <img src="./images/pinterest.svg" alt="Логотип pinterest" class="footer__social-icon pinterest">
           </a>
         </li>
       </ul>
