--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a href="">главная</a>
+            <a href="" class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a href="">посмотреть лоты</a>
+            <a href="" class="header__link">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a href="">об аукционе</a>
+            <a href="" class="header__link">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -28,28 +28,27 @@
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
-          alt="Логотип 'Оно тебе не надо'"
+          alt="Оно тебе не надо"
         />
       </a>
-      <address class="header__contacts-address">
-        <a class="header__contacts-phone" href="tel:+99995555555"
+      <address class="contacts header__contacts-address">
+        <a class="contacts__link" href="tel:+99995555555"
           >+99995555555</a>
-        <a class="header__contacts-mail" href="mailto:info@sobaka.ge"
+        <a class="contacts__link" href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a>
         <div>наб. Принсенграхт 263- 265, Амстердам</div>
       </address>
     </header>
     <main>
       <section class="cover">
-        <div class="cover__overlay"></div>
+        <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="aligned-text aligned-text_left">ОНО</span>
           <span class="aligned-text aligned-text_center">ТЕБЕ</span>
           <span class="aligned-text aligned-text_right">НАДО</span>
         </h1>
         <div class="cover__description">
-          <span class="cover__description-text"
-            >Аукцион вещей, в которые никто не верил</span>
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
           <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
         </div>
       </section>
@@ -59,7 +58,7 @@
           <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_film">
-                <div class="lots__overlay"></div>
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
@@ -74,7 +73,7 @@
           <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_book">
-                <div class="lots__overlay"></div>
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
@@ -92,7 +91,7 @@
           <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_picture">
-                <div class="lots__overlay"></div>
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
@@ -110,7 +109,7 @@
       </section>
       <section class="about">
         <div class="about__logo">
-          <img src="./images/logo-white.svg" alt="Логотип белый" class="about__logo-image" />
+          <img src="./images/logo-white.svg" alt="Оно тебе надо" class="about__logo-image" />
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
@@ -136,40 +135,40 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer__contacts-address">
-        <a class="footer__contacts-phone" href="tel:+99995555555"
+      <address class="contacts">
+        <a class="contacts__link" href="tel:+99995555555"
           >+9 999 555 5555</a>
-        <a class="footer__contacts-mail" href="mailto:info@sobaka.ge"
+        <a class="contacts__link" href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a>
         <div>наб. Принсенграхт 263- 265, Амстердам</div>
       </address>
       <nav class="footer__menu">
         <ul class="footer__links-list">
-          <li class="footer__links-list-item footer__links-list-item_no-bullit">
-            <a href="">главная</a>
+          <li class="footer__links-list-item">
+            <a href="" class="footer__link footer__link_active">главная</a>
           </li>
           <li class="footer__links-list-item">
-            <a href="">посмотреть лоты</a>
+            <a href="" class="footer__link">посмотреть лоты</a>
           </li>
           <li class="footer__links-list-item">
-            <a href="">об аукционе</a>
+            <a href="" class="footer__link">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="./images/yt.svg" alt="Логотип youtube" class="footer__social-icon youtube">
+            <img src="./images/yt.svg" alt="YouTube" class="footer__social-icon youtube">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="./images/vk.svg" alt="Логотип vk" class="footer__social-icon vk">
+            <img src="./images/vk.svg" alt="VK" class="footer__social-icon vk">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="./images/pinterest.svg" alt="Логотип pinterest" class="footer__social-icon pinterest">
+            <img src="./images/pinterest.svg" alt="Pinterest" class="footer__social-icon pinterest">
           </a>
         </li>
       </ul>
