добавил класс для обнуления letter-spacing

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1 class="cover__title">
           <span class="aligned-text aligned-text_left">ОНО</span>
           <span class="aligned-text aligned-text_center">ТЕБЕ</span>
-          <span class="aligned-text aligned-text_right">НАД<span style="letter-spacing: 0;">О</span></span>
+          <span class="aligned-text aligned-text_right">НАД<span class="cover__title-no-spacing">О</span></span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
